--- a/css/style.css
+++ b/css/style.css
@@ -18,6 +18,7 @@ body {
 	-moz-background-size: cover;
 	background-size: cover;
 	font-family: NanumGothic, 'NanumGothic';
+	overflow: hidden;
 }
 
 a:hover {
@@ -71,5 +72,23 @@ a:hover {
 }
 
 .nav > ul > li > a:hover {
+	color: #40BCC9;
+}
+
+.alert_box {
+	text-align: center;
+	width: 100%;
+	height: 40px;
+	background: #426BCA;
+}
+
+.alert_box p{
+	margin: 0;
+	padding: 8px;
+	color: #fff;
+}
+
+.alert_box p a {
+	text-decoration: none;
 	color: #40BCC9;
 }
