--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-	background:url('../img/bg.jpg') #fff no-repeat left top;
+	background:url('../img/bg.jpg') no-repeat left top;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -91,4 +91,26 @@ a:hover {
 .alert_box p a {
 	text-decoration: none;
 	color: #40BCC9;
+}
+
+.portfolio {
+	margin: 9% 0 0 0;
+	position: fixed;
+	width: 100%;
+	height: 350px;
+	background: #fff;
+	z-index: 99;
+}
+
+.blur:before {
+	content: '';
+	position: absolute;
+	top: 0; left: 0; right: 0; bottom: 0;
+	background: inherit;
+	z-index: -1;
+	filter: blur(5px);
+	-webkit-filter: blur(5px);
+	-moz-filter: blur(5px);
+	-o-filter: blur(5px);
+	filter:url(#blur);
 }
