--- a/css/style.css
+++ b/css/style.css
@@ -114,3 +114,44 @@ a:hover {
 	-o-filter: blur(5px);
 	filter:url(#blur);
 }
+
+.click_layer {
+	display: none;
+	position: absolute;
+	top: 0;
+	left: 0;
+	width: 100%;
+	height: 100%;
+	z-index: 10;
+}
+
+.item_text {
+	display: inline-block;
+	padding: 2em 3em;
+	xmin-height: 212px;
+	vertical-align: middle;
+	background: #40BCC9;
+	float: left;
+	position: relative;
+	overflow: hidden;
+}
+
+.item_text:before {
+	content: '';
+	display: inline-block;
+	height: 100%;
+	vertical-align: middle;
+}
+
+.item_text h1 {
+	color: #fff;
+	font-size: 3em;
+	line-height: 1em;
+}
+
+.item_text p {
+	color: #fff;
+	font-size: 1.25em;
+	line-height: 1.5em;
+	margin: 0.5em 0 0 0;
+}
