--- a/css/style.css
+++ b/css/style.css
@@ -115,20 +115,10 @@ a:hover {
 	filter:url(#blur);
 }
 
-.click_layer {
-	display: none;
-	position: absolute;
-	top: 0;
-	left: 0;
-	width: 100%;
-	height: 100%;
-	z-index: 10;
-}
-
-.item_text {
+.port_header {
 	display: inline-block;
-	padding: 2em 3em;
-	xmin-height: 212px;
+	padding: 2em 3em 18px 3em;
+	min-height: 300px;
 	vertical-align: middle;
 	background: #40BCC9;
 	float: left;
@@ -136,22 +126,32 @@ a:hover {
 	overflow: hidden;
 }
 
-.item_text:before {
+.port_header:before {
 	content: '';
 	display: inline-block;
 	height: 100%;
 	vertical-align: middle;
 }
 
-.item_text h1 {
+.port_header h1 {
 	color: #fff;
 	font-size: 3em;
 	line-height: 1em;
 }
 
-.item_text p {
+.port_header p {
 	color: #fff;
 	font-size: 1.25em;
 	line-height: 1.5em;
 	margin: 0.5em 0 0 0;
+}
+
+.close_btn {
+	color: #999;
+	float: right;
+	margin: 10px 30px 0 0;
+	font-size: 2em;
+	text-decoration: none;
+	font-weight: bold;
+	font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
 }
