--- a/css/style.css
+++ b/css/style.css
@@ -105,15 +105,14 @@ a:hover {
 .blur:before {
 	content: '';
 	position: absolute;
-	top: 0; left: 0; right: 0; bottom: 0;
+	top: -10px; left: -10px; right: -10px; bottom: -10px;
 	background: inherit;
 	z-index: -1;
 	filter: blur(5px);
-	-webkit-filter: blur(5px);
-	-moz-filter: blur(5px);
-	-o-filter: blur(5px);
-	filter:url(blur.svg#blur);
-    filter:progid:DXImageTransform.Microsoft.Blur(PixelRadius='6');
+        -webkit-filter: blur(5px);
+        -moz-filter: blur(5px);
+        -o-filter: blur(5px);
+        -ms-filter: blur(5px);
 }
 
 .port_header {
