--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ html, body {
 }
 
 body {
-	background:url('../img/bg.jpg') no-repeat left top;
+	background:url('http://cdn.kentakang.com/bg.jpg') no-repeat left top;
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
@@ -119,7 +119,7 @@ a:hover {
 
 @media all and (-ms-high-contrast: none), (-ms-high-contrast: active) {
     .blur {
-      background:url('../img/ie_bg.jpg') no-repeat left top;
+      background:url('http://cdn.kentakang.com/ie_bg.jpg') no-repeat left top;
 	   -webkit-background-size: cover;
 	   -moz-background-size: cover;
 	   background-size: cover;
