ref #2 add background click event

--- a/css/style.css
+++ b/css/style.css
@@ -31,7 +31,7 @@ a:hover {
 
 .content {
 	padding: 5% 0;
-    z-index: 1;
+    z-index: 98;
 }
 
 .header {
@@ -101,6 +101,15 @@ a:hover {
 .alert_box p a {
 	text-decoration: none;
 	color: #40BCC9;
+}
+
+.curtain {
+	position: fixed;
+	top: 0px;
+	left: 0px;
+	height: 100%;
+	width: 100%;
+	z-index: 98;
 }
 
 .portfolio {
