--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url(http://fonts.googleapis.com/earlyaccess/nanumgothic.css);
+@import url(https://cdn.rawgit.com/moonspam/NanumSquare/master/nanumsquare.css);
 
 /*
 	kentakang.com
@@ -17,7 +17,7 @@ body {
 	-webkit-background-size: cover;
 	-moz-background-size: cover;
 	background-size: cover;
-	font-family: NanumGothic, 'NanumGothic';
+	font-family: NanumSquare, 'NanumSquare';
 	overflow: hidden;
 }
 
